--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* RESET */
 li a {
     text-decoration: none;
     color: black;
@@ -7,12 +8,13 @@ ul {
     list-style-type: none;
 }
 
-.bg-footer {
-    background-image: url(./assets/img/footer-bg.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 380px;   
+img {
+    max-width: 100%;
 }
+
+
+/* COMMONS */
+/* Utilities */
 
 .white {
     color: white;
@@ -29,4 +31,32 @@ ul {
 
 .mb-0 {
     margin-bottom: 0;
+}
+
+/* HEADER */
+
+/* MAIN */
+main {
+    background-image: url(../public/jumbotron.jpg);
+    height: 380px;
+    background-size: cover;
+}
+
+/* FOOTER */
+
+.bg-footer {
+    background-image: url(./assets/img/footer-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 380px;   
+}
+
+.footer-navbar{
+    height: 100px;
+    display: flex;
+    align-items: center;
+}
+
+li img {
+    height: 50px;
 }
